# vobsubocr

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: main.rs  ocr.rs  opt.rs  preprocessor.rs
