[package]
name = "vobsubocr"
version = "0.1.0"
edition = "2018"
description = "Converts DVD VOB subtitles to SRT subtitles with Tesseract OCR"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
image = "0.23.14"
log = "0.4.14"
rayon = "1.5.1"
scoped-tls-hkt = "0.1.2"
snafu = "0.6.10"
subparse = "0.7.0"
tesseract = "0.9.0"
vobsub = "0.2.3"
