[package]
name = "vobsubocr"
version = "0.1.1"
authors = ["Eliza Velasquez"]
edition = "2018"
description = "Converts DVD VOB subtitles to SRT subtitles with Tesseract OCR"
license = "GPL-3.0"
keywords = ["vobsub", "subtitles", "dvd", "ocr"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
repository = "https://github.com/elizagamedev/vobsubocr/"
homepage = "https://github.com/elizagamedev/vobsubocr/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["cargo", "derive"] }
image = "0.24"
leptess = "0.14.0"
log = "0.4.14"
rayon = "1.5.1"
scoped-tls-hkt = "0.1.2"
simple_logger = { version = "4.1.0", features = ["colors"] }
snafu = "0.7"
subparse = "0.7.0"
vobsub = "0.2.3"
